--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,5 @@ serde_json = "1"
 color-eyre = "0.6"
 urlencoding = "2"
 futures = "0.3"
-pbr = "1.0.4"
+pbr = "1"
+clap = { version = "3", features = ["cargo"] }
