--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,9 @@
 name = "ncu-rs"
 version = "0.1.0"
 edition = "2021"
+repository = "https://github.com/Huskehhh/ncu-rs"
+description = "A stupid simple and fast cli for updating your package.json dependencies."
+license = "MIT"
 
 [dependencies]
 tokio = { version = "1", features = ["full"] }
