--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ urlencoding = "2"
 futures = "0.3"
 pbr = "1"
 clap = { version = "3", features = ["cargo"] }
+indexmap = { version = "1.9.1", features = ["serde"] }
