--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,4 +16,8 @@ urlencoding = "2"
 futures = "0.3"
 pbr = "1"
 clap = { version = "3", features = ["cargo"] }
-indexmap = { version = "1.9.1", features = ["serde"] }
+indexmap = { version = "1.9.1", features = ["serde", "rayon"] }
+tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
+tracing = { version = "0.1.37", features = ["log-always"] }
+tracing-tree = "0.2.1"
+rayon = "1.5.3"
